--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "9.1.1",
     "next-compose": "0.0.2",
     "node-sass": "^4.12.0",
