--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "bulma": "^0.7.5",
     "next": "9.1.1",
     "next-compose": "0.0.2",
     "node-sass": "^4.12.0",
