--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-boost": "^0.4.4",
     "bulma": "^0.7.5",
+    "graphql": "^14.5.8",
     "next": "9.1.1",
     "next-compose": "0.0.2",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "16.10.2",
     "react-dom": "16.10.2"
