--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.6",
-    "@apollo/react-hooks": "^3.1.3",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "bulma": "^0.7.5",
@@ -21,6 +21,7 @@
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "16.10.2",
+    "react-apollo": "^3.1.3",
     "react-dom": "16.10.2"
   }
 }
