--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.12.0",
     "react": "16.10.2",
     "react-apollo": "^3.1.3",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "reactjs-popup": "^1.5.0"
   }
 }
