--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.1.6",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
     "bulma": "^0.7.5",
     "graphql": "^14.5.8",
     "next": "9.1.1",
@@ -23,6 +26,8 @@
     "react": "16.10.2",
     "react-apollo": "^3.1.3",
     "react-dom": "16.10.2",
-    "reactjs-popup": "^1.5.0"
+    "react-redux": "^7.1.3",
+    "reactjs-popup": "^1.5.0",
+    "redux": "^4.0.4"
   }
 }
