--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^14.5.8",
     "next": "9.1.1",
     "next-compose": "0.0.2",
+    "next-redux-wrapper": "^4.0.1",
     "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "react": "16.10.2",
